--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 2002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -26,6 +26,8 @@
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
+    "puppeteer": "^23.1.1",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
@@ -38,6 +40,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
